css merged in main.css

--- a/maket.html
+++ b/maket.html
@@ -39,124 +39,89 @@
             <div class="content-header-event last"><img src="images/event-logo.png"></div>
         </div>
         <div class="content-page">
-            <div class="event-tab">
+            <div class="event-tab shadow-border">
                 <img src="images/food.png">
 
-                <div class="img-event-date">2012
-                May
-
-                3
-                12
-                :
-
-                00</div>
-                <div class="event-caption">Time to eat</div>
-                <div class="event-label">Time to eat? is time to put some tasty things into stomach...</div>
-                <div class="event-location"><img src="images/filterlocation.png">Los Angeles, CA</div>
-                <div class="event-tags"><img src="images/filtertags.png">Tasty food, plates, restaurants, fruits for
-                    free, other stuff
+                <div class="img-event-date"><span>2012 May 3 12:00</span></div>
+                <div class="event-caption"><span>Time to eat</span></div>
+                <div class="event-label"><span>Time to eat? is time to put some tasty things into stomach...</span>
                 </div>
-                <div class="event-cat special-offers">Special Offers</div>
+                <div class="event-location"><img src="images/filterlocation.png"><span>Los Angeles, CA</span></div>
+                <div class="event-tags"><img src="images/filtertags.png"><span>Tasty food, plates, restaurants, fruits for
+                    free, other stuff</span>
+                </div>
+                <div class="event-cat special-offers"><span>Special Offers</span></div>
             </div>
-            <div class="event-tab">
+            <div class="event-tab shadow-border">
                 <img src="images/food.png">
 
-                <div class="img-event-date">2012
-                May
-
-                3
-                12
-                :
-
-                00</div>
-                <div class="event-caption">Time to eat</div>
-                <div class="event-label">Time to eat? is time to put some tasty things into stomach...</div>
-                <div class="event-location"><img src="images/filterlocation.png">Los Angeles, CA</div>
-                <div class="event-tags"><img src="images/filtertags.png">Tasty food, plates, restaurants, fruits for
-                    free, other stuff
+                <div class="img-event-date"><span>2012 May 3 12:00</span></div>
+                <div class="event-caption"><span>Time to eat</span></div>
+                <div class="event-label"><span>Time to eat? is time to put some tasty things into stomach...</span>
                 </div>
-                <div class="event-cat entertainment">Entertainment</div>
+                <div class="event-location"><img src="images/filterlocation.png"><span>Los Angeles, CA</span></div>
+                <div class="event-tags"><img src="images/filtertags.png"><span>Tasty food, plates, restaurants, fruits for
+                    free, other stuff</span>
+                </div>
+                <div class="event-cat entertainment"><span>Entertainment</span></div>
             </div>
-            <div class="event-tab">
+            <div class="event-tab shadow-border last-in-row">
                 <img src="images/food.png">
 
-                <div class="img-event-date">2012
-                May
-
-                3
-                12
-                :
-
-                00</div>
-                <div class="event-caption">Time to eat</div>
-                <div class="event-label">Time to eat? is time to put some tasty things into stomach...</div>
-                <div class="event-location"><img src="images/filterlocation.png">Los Angeles, CA</div>
-                <div class="event-tags"><img src="images/filtertags.png">Tasty food, plates, restaurants, fruits for
-                    free, other stuff
+                <div class="img-event-date"><span>2012 May 3 12:00</span></div>
+                <div class="event-caption"><span>Time to eat</span></div>
+                <div class="event-label"><span>Time to eat? is time to put some tasty things into stomach...</span>
                 </div>
-                <div class="event-cat special-offers">Special Offers</div>
+                <div class="event-location"><img src="images/filterlocation.png"><span>Los Angeles, CA</span></div>
+                <div class="event-tags"><img src="images/filtertags.png"><span>Tasty food, plates, restaurants, fruits for
+                    free, other stuff</span>
+                </div>
+                <div class="event-cat special-offers"><span>Special Offers</span></div>
             </div>
-            <div class="event-tab">
+            <div class="event-tab shadow-border">
                 <img src="images/food.png">
 
-                <div class="img-event-date">2012
-                May
-
-                3
-                12
-                :
-
-                00</div>
-                <div class="event-caption">Time to eat</div>
-                <div class="event-label">Time to eat? is time to put some tasty things into stomach...</div>
-                <div class="event-location"><img src="images/filterlocation.png">Los Angeles, CA</div>
-                <div class="event-tags"><img src="images/filtertags.png">Tasty food, plates, restaurants, fruits for
-                    free, other stuff
+                <div class="img-event-date"><span>2012 May 3 12:00</span></div>
+                <div class="event-caption"><span>Time to eat</span></div>
+                <div class="event-label"><span>Time to eat? is time to put some tasty things into stomach...</span>
                 </div>
-                <div class="event-cat business">Business</div>
+                <div class="event-location"><img src="images/filterlocation.png"><span>Los Angeles, CA</span></div>
+                <div class="event-tags"><img src="images/filtertags.png"><span>Tasty food, plates, restaurants, fruits for
+                    free, other stuff</span>
+                </div>
+                <div class="event-cat business"><span>Business</span></div>
             </div>
-            <div class="event-tab">
+            <div class="event-tab shadow-border">
                 <img src="images/food.png">
 
-                <div class="img-event-date">2012
-                May
-
-                3
-                12
-                :
-
-                00</div>
-                <div class="event-caption">Time to eat</div>
-                <div class="event-label">Time to eat? is time to put some tasty things into stomach...</div>
-                <div class="event-location"><img src="images/filterlocation.png">Los Angeles, CA</div>
-                <div class="event-tags"><img src="images/filtertags.png">Tasty food, plates, restaurants, fruits for
-                    free, other stuff
+                <div class="img-event-date"><span>2012 May 3 12:00</span></div>
+                <div class="event-caption"><span>Time to eat</span></div>
+                <div class="event-label"><span>Time to eat? is time to put some tasty things into stomach...</span>
                 </div>
-                <div class="event-cat business">Business</div>
+                <div class="event-location"><img src="images/filterlocation.png"><span>Los Angeles, CA</span></div>
+                <div class="event-tags"><img src="images/filtertags.png"><span>Tasty food, plates, restaurants, fruits for
+                    free, other stuff</span>
+                </div>
+                <div class="event-cat business"><span>Business</span></div>
             </div>
-            <div class="event-tab">
+            <div class="event-tab shadow-border last-in-row">
                 <img src="images/food.png">
 
-                <div class="img-event-date">2012
-                May
-
-                3
-                12
-                :
-
-                00</div>
-                <div class="event-caption">Time to eat</div>
-                <div class="event-label">Time to eat? is time to put some tasty things into stomach...</div>
-                <div class="event-location"><img src="images/filterlocation.png">Los Angeles, CA</div>
-                <div class="event-tags"><img src="images/filtertags.png">Tasty food, plates, restaurants, fruits for
-                    free, other stuff
+                <div class="img-event-date"><span>2012 May 3 12:00</span></div>
+                <div class="event-caption"><span>Time to eat</span></div>
+                <div class="event-label"><span>Time to eat? is time to put some tasty things into stomach...</span>
                 </div>
-                <div class="event-cat entertainment">Entertainment</div>
+                <div class="event-location"><img src="images/filterlocation.png"><span>Los Angeles, CA</span></div>
+                <div class="event-tags"><img src="images/filtertags.png"><span>Tasty food, plates, restaurants, fruits for
+                    free, other stuff</span>
+                </div>
+                <div class="event-cat entertainment"><span>Entertainment</span></div>
+            </div>
+
+            <div class="draft-events-show-more full-wide shadow-border"><span>MORE</span>
+
             </div>
             <div style="height:1px;overflow:hidden;clear:both;"></div>
-            <div class="content-footer">
-                MORE
-            </div>
         </div>
         <div class="content-right-sidebar">
             <div class="search-input">
@@ -173,17 +138,35 @@
                 <!--<div class="filter-date"></div>
                <div class="filter-location"></div>
                <div class="filter-completed"></div>-->
-                <div class="filter-date"><img src="images/filterdate.png">начиная с сегодня</div>
-                <div class="filter-location"><img src="images/filterlocation.png">Киев, Украина</div>
-                <div class="filter-completed"><input type="checkbox">отображать завершенные</div>
-                <div class="filter-tags"><img src="images/filtertags.png">популярные теги:</div>
+                <div class="filter-date"><img src="images/filterdate.png"><input id="datepicker"
+                                                                                 hidden><span id="startdate">начиная с сегодня </span><a href="#">(change)</a>
+                </div>
+                <div class="filter-location"><img src="images/filterlocation.png"><input id="locationpicker"
+                                                                                         hidden><span id="location">Киев, Украина </span><a href="#">(change)</a>
+                </div>
+                <div class="filter-completed"><input type="checkbox"><span>отображать завершенные</span></div>
+                <div class="filter-tags"><img src="images/filtertags.png"><span>популярные теги:</span></div>
                 <div class="filter-loaded-tags">
-                    <a href="/">
-                        Zelus nisl probo nunc lobortis premo duis esse.
-                        Illum eum enim tincidunt cui.
-                        Occuro validus saluto hos eu vindico validus et neque proprius.
-                        Uxor comis suscipit ullamcorper augue persto jugis.
-                    </a>
+                    <a href="/">tag,&nbsp;</a>
+                    <a href="/">tag,&nbsp;</a>
+                    <a href="/">tag,&nbsp;</a>
+                    <a href="/">tag,&nbsp;</a>
+                    <a href="/">tag,&nbsp;</a>
+                    <a href="/">tag,&nbsp;</a>
+                    <a href="/">tag,&nbsp;</a>
+                    <a href="/">tag,&nbsp;</a>
+                    <a href="/">tag,&nbsp;</a>
+                    <a href="/">tag,&nbsp;</a>
+                    <a href="/">tag,&nbsp;</a>
+                    <a href="/">tag,&nbsp;</a>
+                    <a href="/">tag,&nbsp;</a>
+                    <a href="/">tag,&nbsp;</a>
+                    <a href="/">tag,&nbsp;</a>
+                    <a href="/">tag,&nbsp;</a>
+                    <a href="/">tag,&nbsp;</a>
+                    <a href="/">tag,&nbsp;</a>
+                    <a href="/">tag,&nbsp;</a>
+                    <a href="/">tag,&nbsp;</a>
                 </div>
             </div>
         </div>
