--- a/quests.html
+++ b/quests.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>Event Page</title>
-    <link type="text/css" rel="stylesheet" media="all" href="styles/main.css">
-    <link type="text/css" rel="stylesheet" media="all" href="styles/event.css">
-    <link type="text/css" rel="stylesheet" media="all" href="styles/event-create.css">
-    <link type="text/css" rel="stylesheet" media="all" href="styles/draft_calendar.css">
-    <link type="text/css" rel="stylesheet" media="all" href="styles/draft_activity.css">
-    <link type="text/css" rel="stylesheet" media="all" href="styles/profile.css">
-    <link type="text/css" rel="stylesheet" media="all" href="styles/quests.css">
+    <link type="text/css"
+          rel="stylesheet"
+          media="all"
+          href="styles/main.css">
 </head>
 <body>
-
 
 <div class="content">
     <div class="quest-form-header usual">
         <div class="quest-form-header-item usual">
-             <span>Street Art Utopia</span>
+            <span>Street Art Utopia</span>
         </div>
         <div class="quest-form-header-item usual quest-active">
             <a href="">Список посетителей</a>
@@ -26,83 +22,112 @@
             <a href="">пригласить</a>
         </div>
         <img src="images/big-cross.png">
+
         <div style="height:1px;overflow:hidden;clear:both;"></div>
     </div>
     <div class="content-page usual quest-page">
+
         <div class="quest-form-filter usual">
-            <span>&nbsp;Посетителей: 24</span>
+            <span>Посетителей: 24</span>
             <fieldset form="quest-form">
                 <legend>Выбрать:</legend>
-                <input type="checkbox" form="quest-form" name="catalog" value=""> идет<br>
-                <input type="checkbox" form="quest-form" name="catalog" value=""> не идет<br>
-                <input type="checkbox" form="quest-form" name="catalog" value=""> не определился<br>
-                <input type="checkbox" form="quest-form" name="catalog" value=""> не ответил на приглашение<br>
+                <input type="checkbox"
+                       form="quest-form"
+                       name="catalog"
+                       value=""> идет<br>
+                <input type="checkbox"
+                       form="quest-form"
+                       name="catalog"
+                       value=""> не идет<br>
+                <input type="checkbox"
+                       form="quest-form"
+                       name="catalog"
+                       value=""> не определился<br>
+                <input type="checkbox"
+                       form="quest-form"
+                       name="catalog"
+                       value=""> не ответил на приглашение<br>
             </fieldset>
+            <div style="height:1px;overflow:hidden;clear:both;"></div>
         </div>
-        <div class="quest-form-list usual">
-            <div class="quest-form-list-item usual q-second">
-                <img class="usual" src="userimages/avatar-0001.png">
-                <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                <div class="usual quest-form-list-item-status"><span>статус</span></div>
-                <img class="quest-form-list-item-cross" src="images/cross.png">
-            </div>
-            <div class="quest-form-list-item usual">
-                <img class="usual" src="userimages/avatar-0001.png">
-                <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                <div class="usual quest-form-list-item-status"><span>статус</span></div>
-                <img class="quest-form-list-item-cross" src="images/cross.png">
-            </div>
-            <div class="quest-form-list-item usual q-second">
-                <img class="usual" src="userimages/avatar-0001.png">
-                <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                <div class="usual quest-form-list-item-status"><span>статус</span></div>
-                <img class="quest-form-list-item-cross" src="images/cross.png">
-            </div>
-            <div class="quest-form-list-item usual">
-                <img class="usual" src="userimages/avatar-0001.png">
-                <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                <div class="usual quest-form-list-item-status"><span>статус</span></div>
-                <img class="quest-form-list-item-cross" src="images/cross.png">
-            </div>
-            <div class="quest-form-list-item usual q-second">
-                <img class="usual" src="userimages/avatar-0001.png">
-                <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                <div class="usual quest-form-list-item-status"><span>статус</span></div>
-                <img class="quest-form-list-item-cross" src="images/cross.png">
-            </div>
-            <div class="quest-form-list-item usual">
-                <img class="usual" src="userimages/avatar-0001.png">
-                <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                <div class="usual quest-form-list-item-status"><span>статус</span></div>
-                <img class="quest-form-list-item-cross" src="images/cross.png">
-            </div>
-            <div class="quest-form-list-item usual q-second last">
-                <img class="usual" src="userimages/avatar-0001.png">
-                <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                <div class="usual quest-form-list-item-status"><span>статус</span></div>
-                <img class="quest-form-list-item-cross" src="images/cross.png">
-            </div>
-            <div class="draft-events-show-more full-wide"><span>More</span></div>
+        <div class="usual quest-form-list">
+            <div class="quest-form-list shadow-border usual">
 
+                <div class="quest-form-list-item usual q-second">
+                    <img class="usual"
+                         src="userimages/avatar-0001.png">
+
+                    <div class="usual quest-form-list-item-username"><span>Username</span></div>
+                    <div class="usual quest-form-list-item-status"><span>статус</span></div>
+                    <img class="quest-form-list-item-cross"
+                         src="images/cross.png">
+                </div>
+                <div class="quest-form-list-item  usual">
+                    <img class="usual"
+                         src="userimages/avatar-0001.png">
+
+                    <div class="usual quest-form-list-item-username"><span>Username</span></div>
+                    <div class="usual quest-form-list-item-status"><span>статус</span></div>
+                    <img class="quest-form-list-item-cross"
+                         src="images/cross.png">
+                </div>
+                <div class="quest-form-list-item usual q-second">
+                    <img class="usual"
+                         src="userimages/avatar-0001.png">
+
+                    <div class="usual quest-form-list-item-username"><span>Username</span></div>
+                    <div class="usual quest-form-list-item-status"><span>статус</span></div>
+                    <img class="quest-form-list-item-cross"
+                         src="images/cross.png">
+                </div>
+                <div class="quest-form-list-item usual">
+                    <img class="usual"
+                         src="userimages/avatar-0001.png">
+
+                    <div class="usual quest-form-list-item-username"><span>Username</span></div>
+                    <div class="usual quest-form-list-item-status"><span>статус</span></div>
+                    <img class="quest-form-list-item-cross"
+                         src="images/cross.png">
+                </div>
+                <div class="quest-form-list-item usual q-second">
+                    <img class="usual"
+                         src="userimages/avatar-0001.png">
+
+                    <div class="usual quest-form-list-item-username"><span>Username</span></div>
+                    <div class="usual quest-form-list-item-status"><span>статус</span></div>
+                    <img class="quest-form-list-item-cross"
+                         src="images/cross.png">
+                </div>
+                <div class="quest-form-list-item usual">
+                    <img class="usual"
+                         src="userimages/avatar-0001.png">
+
+                    <div class="usual quest-form-list-item-username"><span>Username</span></div>
+                    <div class="usual quest-form-list-item-status"><span>статус</span></div>
+                    <img class="quest-form-list-item-cross"
+                         src="images/cross.png">
+                </div>
+                <div class="quest-form-list-item usual q-second last">
+                    <img class="usual"
+                         src="userimages/avatar-0001.png">
+
+                    <div class="usual quest-form-list-item-username"><span>Username</span></div>
+                    <div class="usual quest-form-list-item-status"><span>статус</span></div>
+                    <img class="quest-form-list-item-cross"
+                         src="images/cross.png">
+                </div>
+
+            </div>
+            <div class="draft-events-show-more shadow-border full-wide"><span>More</span></div>
         </div>
-
-
-
-
 
         <form id="quest-form">
         </form>
-        <div style="height:1px;overflow:hidden;clear:both;">
-
-        </div>
+        <div style="height:1px;overflow:hidden;clear:both;"></div>
     </div>
-
 
     <div style="height:1px;overflow:hidden;clear:both;"></div>
 </div>
-
-
-
 
 </body>
 </html>
