--- a/event_create.html
+++ b/event_create.html
@@ -1,27 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>Event Page</title>
-    <link type="text/css" rel="stylesheet" media="all" href="styles/main.css">
-    <link type="text/css" rel="stylesheet" media="all" href="styles/event.css">
-    <link type="text/css" rel="stylesheet" media="all" href="styles/event-create.css">
+    <link type="text/css"
+          href="styles/jquery-ui-1.8.23.custom.css"
+          rel="stylesheet">
+    <script src="js/jquery-1.8.0.min.js"
+            type="text/javascript"></script>
+    <script src="js/jquery-ui-1.8.23.custom.min.js"
+            type="text/javascript"></script>
+    <link type="text/css"
+          rel="stylesheet"
+          media="all"
+          href="styles/main.css">
 </head>
 <body>
 <div class="page">
-<div class="header" >
+<div class="header">
     <div class="page-header">
         <div class="logo">
-            <a  href="/"><img src="images/logo.png"></a>
+            <a href="/"><img src="images/logo.png"></a>
         </div>
         <div class="nav">
-            <div class="menu-active"><a class="" href="/">Activity</a></div>
+            <div class="menu-active"><a class=""
+                                        href="/">Activity</a></div>
             <div class="border"></div>
-            <div ><a class="" href="/">Calendar</a></div>
+            <div><a class=""
+                    href="/">Calendar</a></div>
             <div class="border"></div>
-            <div ><a class="" href="/">Catalog</a></div>
+            <div><a class=""
+                    href="/">Catalog</a></div>
             <div class="border"></div>
-            <div ><a href="/">Profile</a></div>
+            <div><a href="/">Profile</a></div>
         </div>
         <div class="login">
             <a href="/"><img src="images/user-icon.png">Username</a>
@@ -32,9 +43,13 @@
 <div class="content">
     <div class="content-header">
         <div class="content-header-active last"><a href="/">Страница события</a></div>
+        <div class="content-header-event last"><img src="images/event-logo.png"></div>
     </div>
     <div class="content-page">
-        <div id="e-caption"><input name="ecaption" placeholder="event name" form="event-create-form" class="event-caption-input" ></div>
+        <div id="e-caption"><input name="ecaption"
+                                   placeholder="event name"
+                                   form="event-create-form"
+                                   class="event-caption-input"></div>
         <div class="event-more-b1">
             <div id="e-image">
                 <img src="userimages/event0001.png">
@@ -43,69 +58,133 @@
         <div class="event-more-b2">
             <div id="e-date">
                 <img src="images/filterdate.png">
-                <input name="edbegin" placeholder="30 Apr" form="event-create-form" class="event-date-input">
-                <input name="etbegin" placeholder="11:00" form="event-create-form" class="event-date-input">
-                <input name="edend" placeholder="16 May" form="event-create-form" class="event-date-input">
-                <input name="etend" placeholder="18:00" form="event-create-form" class="event-date-input">
+                <input name="edbegin"
+                       id="datepickerStart"
+                       placeholder="30 Apr"
+                       form="event-create-form"
+                       class="event-date-input">
+                <input name="etbegin"
+                       placeholder="11:00"
+                       form="event-create-form"
+                       class="event-date-input">
+                <input name="edend"
+                       id="datepickerEnd"
+                       placeholder="16 May"
+                       form="event-create-form"
+                       class="event-date-input">
+                <input name="etend"
+                       placeholder="18:00"
+                       form="event-create-form"
+                       class="event-date-input">
             </div>
             <div id="e-location">
-                <img src="images/filterlocation.png"><input name="eplace" placeholder='Киев, Клуб "Бинго"' form="event-create-form" class="event-place-input">
+                <img src="images/filterlocation.png"><input name="eplace"
+                                                            placeholder='Киев, Клуб "Бинго"'
+                                                            form="event-create-form"
+                                                            class="event-place-input">
             </div>
             <div class="e-category">
                 <img src="images/dir-tree-icon.png">
-                <select name="ecategory"  required form="event-create-form" class="event-category-input">
+                <select name="ecategory"
+                        required
+                        form="event-create-form"
+                        class="event-category-input">
                     <option value="Entertainment">Entertainment</option>
                     <option value="Business">Business</option>
-                    <option selected value="Other">Other</option>
+                    <option selected
+                            value="Other">Other
+                    </option>
                 </select>
             </div>
             <div class="e-site">
-                <img src="images/filtertags.png"><input name="etags" placeholder='tags' form="event-create-form" class="event-tags-input">
+                <img src="images/filtertags.png"><input name="etags"
+                                                        placeholder='tags'
+                                                        form="event-create-form"
+                                                        class="event-tags-input">
             </div>
 
         </div>
-        <div  class="e-type">
+        <div class="e-type">
             <fieldset form="event-create-form">
                 <legend>Тип события</legend>
-                <input type="radio" checked form="event-create-form" name="privasy" value="privat" > приватное
-                <input type="radio" form="event-create-form" name="privasy" value="public" > публичное<br>
-                <input type="checkbox" form="event-create-form" name="catalog" value=""> разместить в каталоге
+                <input type="radio"
+                       checked
+                       form="event-create-form"
+                       name="privasy"
+                       value="privat"> приватное
+                <input type="radio"
+                       form="event-create-form"
+                       name="privasy"
+                       value="public"> публичное<br>
+                <input type="checkbox"
+                       form="event-create-form"
+                       name="catalog"
+                       value=""> разместить в каталоге
             </fieldset>
         </div>
-        <div class="e-text" >
+        <div class="e-text">
             <span>Описание события</span><br>
-            <textarea form="event-create-form" name="etext" class="event-text-input"></textarea>
-         </div>
+            <textarea form="event-create-form"
+                      name="etext"
+                      class="event-text-input"></textarea>
+        </div>
         <div class="e-participants">
             <fieldset form="event-create-form">
                 <legend>Участники</legend>
-                <input type="radio" checked form="event-create-form" name="privasy" value="any"> кто угодно
-                <input type="radio" form="event-create-form" name="privasy" value="ask"> по заявкам
-                <input type="radio" form="event-create-form" name="privasy" value="invite"> по приглашениям<br>
-                <input type="checkbox" form="event-create-form" name="catalog" value=""> количество мест<nobr>
-                <input  name="eplaces" type="number" placeholder="123" form="event-create-form" class="event-places-input"><br>
-                <input type="checkbox" form="event-create-form" name="catalog" value=""> скрыть список участников<br>
-                <input type="checkbox" form="event-create-form" name="catalog" value=""> закрыть набор<br>
+                <input type="radio"
+                       checked
+                       form="event-create-form"
+                       name="privasy"
+                       value="any"> кто угодно
+                <input type="radio"
+                       form="event-create-form"
+                       name="privasy"
+                       value="ask"> по заявкам
+                <input type="radio"
+                       form="event-create-form"
+                       name="privasy"
+                       value="invite"> по приглашениям<br>
+                <input type="checkbox"
+                       form="event-create-form"
+                       name="catalog"
+                       value=""> количество мест
+
+                <input name="eplaces"
+                       type="number"
+                       placeholder="123"
+                       form="event-create-form"
+                       class="event-places-input"><br>
+                <input type="checkbox"
+                       form="event-create-form"
+                       name="catalog"
+                       value=""> скрыть список участников<br>
+                <input type="checkbox"
+                       form="event-create-form"
+                       name="catalog"
+                       value=""> закрыть набор<br>
             </fieldset>
         </div>
         <div class="e-comments">
             <fieldset form="event-create-form">
                 <legend>Коментарии</legend>
-                <input type="checkbox" form="event-create-form" name="catalog" value=""> разрешать коментарии<br>
-                <input type="checkbox" form="event-create-form" name="catalog" value=""> уведомлять о новых сообщениях
-                </fieldset>
+                <input type="checkbox"
+                       form="event-create-form"
+                       name="catalog"
+                       value=""> разрешать коментарии<br>
+                <input type="checkbox"
+                       form="event-create-form"
+                       name="catalog"
+                       value=""> уведомлять о новых сообщениях
+            </fieldset>
         </div>
         <form id="event-create-form">
-            <input type="submit" value="Сохранить">
+            <input type="submit"
+                   value="Сохранить">
         </form>
         <div style="height:1px;overflow:hidden;clear:both;">
 
         </div>
     </div>
-
-
-
-
 
 </div>
 <div class="footer">
@@ -143,5 +222,41 @@
     </div>
 </div>
 </div>
+<script type="text/javascript">
+    $(function () {
+        $.datepicker.setDefaults(
+                $.extend($.datepicker.regional["ru"])
+        );
+        $("#datepickerStart").datepicker({
+            changeYear:true
+        });
+        $("a").click(function () {
+            $("#datepickerStart").datepicker(
+                    "dialog",
+                    "23.04.2009",
+
+                    { showButtonPanel:true },
+                    [300, 300]
+            );
+        });
+    });
+    $(function () {
+        $.datepicker.setDefaults(
+                $.extend($.datepicker.regional["ru"])
+        );
+        $("#datepickerEnd").datepicker({
+            changeYear:true
+        });
+        $("a").click(function () {
+            $("#datepickerEnd").datepicker(
+                    "dialog",
+                    "23.04.2009",
+
+                    { showButtonPanel:true },
+                    [300, 300]
+            );
+        });
+    });
+</script>
 </body>
 </html>
