--- a/draft_06_activity.html
+++ b/draft_06_activity.html
@@ -55,7 +55,7 @@
                            value="">
                 </div>
             </div>
-            <div class="usual shadow-border">
+            <div class="usual shadow-border ">
                 <div class="activity-event-item">
                     <img src="userimages/event-small0002.png">
 
@@ -114,7 +114,7 @@
                 <span>За вчера, 01 июня 2012</span>
             </div>
             <hr>
-            <div class="usual  shadow-border">
+            <div class="usual margin-b5  shadow-border ">
                 <div class="activity-event-item">
                     <img src="userimages/event-small0002.png">
 
