fixed margin again

--- a/draft_06_activity.html
+++ b/draft_06_activity.html
@@ -55,7 +55,7 @@
                            value="">
                 </div>
             </div>
-            <div class="usual shadow-border ">
+            <div class="usual margin-b5 shadow-border ">
                 <div class="activity-event-item">
                     <img src="userimages/event-small0002.png">
 
